Likely fix for bug #33140